started profile page and added its link to the header

--- a/mobile-friendly/settings.html
+++ b/mobile-friendly/settings.html
@@ -31,17 +31,18 @@
             </div>
         </div>
     </div>
-    <header>
+    <header><!--* NAVIGATION FOR BOTH MOBILE AND DESKTOP--> 
         <div class="logo">
                 <img src="../images/comp-cat-beta.webp" alt="cat using computer logo">
         </div>
         <nav>
-            <div class="nav-bar">
+            <div class="nav-bar"> <!--* DESKTOP NAVIGATION--> 
                 <div class="desktop-navContent">
                     <a href="index.html">Home</a>
                     <div class="projects-container">
                         <a>Projects</a>
-                        <div class="projects-dropdown">
+                        <div class="projects-dropdown"> <!--*Projects dropdown-->
+                            <!--TODO: maybe put dropdown css in two separate files from everything else so they can both be relative to their parents-->
                             <a href="newProject.html">Create New Project</a>
                             <a href="projects.html">Current/Past Projects</a>
                         </div>
@@ -53,13 +54,14 @@
                     </div>
                     <div class="desktop-user" id="user-logged-in">
                         <img src="../images/dragon/dragon-0.webp" alt="user profile picture">
-                        <div class="user-content">
-                            <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
+                        <div class="user-content"> <!--* User Dropdown-->
+                            <a href="profile.html">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
                             <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
                             <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                         </div>
                     </div>
                 </div>
+                <!--* MOBILE NAVIGATION-->
                 <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
                     <div class="menu-icon-wrapper">
                         <div id="menu-bar-1" class="menu-bar"></div>
@@ -68,11 +70,11 @@
                     </div>
                 </div>
                 <div class="user" id="user">
-                    <a href="#"><img src="../images/dragon/dragon-0.webp" alt="user profile picture"></a>
+                    <a href="profile.html"><img src="../images/dragon/dragon-0.webp" alt="user profile picture"></a>
                     <!-- <a href="login.html"><h2>Login</h2></a> -->
                 </div>
             </div>
-            <div class="navMenu slide-right close" id="navMenu">
+            <div class="navMenu slide-right close" id="navMenu"> <!--* Dropdown-->
                 <div class="navContent">
                     <a href="index.html">Home 
                         <i class="fa fa-home" id="home-icon" alt="home icon"></i></a>
