--- a/mobile-friendly/projects.html
+++ b/mobile-friendly/projects.html
@@ -1,22 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Elsewhere Writers Guild Official Website"> 
-    <meta property="og:description" content="The official website for the Elsewhere Writers Guild, an alternative option to NaNoWriMo."> 
-    <meta property="og:image" content="http://www.elsewherewriters.com/images/comp-cat-beta.webp"> 
-    <meta property="og:url" content="http://www.elsewherewriters.com/index">
-    <title>Projects</title>
-    <link rel="stylesheet" href="mf-css/style.css">
-    <link rel="stylesheet" href="mf-css/projects.css">
-    <link rel="stylesheet" href="mf-css/progressBar.css">
-    <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
-    <script src="js/scripts.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-    <header><!--* NAVIGATION FOR BOTH MOBILE AND DESKTOP--> 
+<header><!--* NAVIGATION FOR BOTH MOBILE AND DESKTOP--> 
         <div class="logo">
                 <img src="../images/comp-cat-beta.webp" alt="cat using computer logo">
         </div>
@@ -40,7 +22,7 @@
                     <div class="desktop-user" id="user-logged-in">
                         <img src="../images/dragon/dragon-0.webp" alt="user profile picture">
                         <div class="user-content"> <!--* User Dropdown-->
-                            <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
+                            <a href="profile.html">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
                             <a href="settings.html">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
                             <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
                         </div>
@@ -55,7 +37,7 @@
                     </div>
                 </div>
                 <div class="user" id="user">
-                    <a href="#"><img src="../images/dragon/dragon-0.webp" alt="user profile picture"></a>
+                    <a href="profile.html"><img src="../images/dragon/dragon-0.webp" alt="user profile picture"></a>
                     <!-- <a href="login.html"><h2>Login</h2></a> -->
                 </div>
             </div>
@@ -87,22 +69,22 @@
         <div class="project-select">Project <i class="fa fa-caret-down" id="down-icon" alt="down icon"></i>
             <div class="project-select-dropdown">
                 <div class="project-select-content">
-                    <p>PH-Project 1</p>
+                    <a class="project-select-link">PH-Project 1</a>
                 </div>
                 <div class="project-select-content">
-                    <p>PH-Project 2</p>
+                    <a class="project-select-link">PH-Project 2</a>
                 </div>
                 <div class="project-select-content">
-                    <p>PH-Project 3</p>
+                    <a class="project-select-link">PH-Project 3</a>
                 </div>
                 <div class="project-select-content">
-                    <p>PH-Project 4</p>
+                    <a class="project-select-link">PH-Project 4</a>
                 </div>
             </div>
         </div>
     </div>
     <div>
-        
+
     </div>
 </body>
 </html>
