started profile css

--- a/mobile-friendly/projects.html
+++ b/mobile-friendly/projects.html
@@ -1,4 +1,22 @@
-<header><!--* NAVIGATION FOR BOTH MOBILE AND DESKTOP--> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Elsewhere Writers Guild Official Website"> 
+    <meta property="og:description" content="The official website for the Elsewhere Writers Guild, an alternative option to NaNoWriMo."> 
+    <meta property="og:image" content="http://www.elsewherewriters.com/images/comp-cat-beta.webp"> 
+    <meta property="og:url" content="http://www.elsewherewriters.com/index">
+    <title>Projects</title>
+    <link rel="stylesheet" href="mf-css/style.css">
+    <link rel="stylesheet" href="mf-css/projects.css">
+    <link rel="stylesheet" href="mf-css/progressBar.css">
+    <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
+    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <header><!--* NAVIGATION FOR BOTH MOBILE AND DESKTOP--> 
         <div class="logo">
                 <img src="../images/comp-cat-beta.webp" alt="cat using computer logo">
         </div>
@@ -84,7 +102,7 @@
         </div>
     </div>
     <div>
-
+        
     </div>
 </body>
 </html>
