--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -20,17 +20,63 @@
     <!--* POPUP FOR CHOOSING ACTIVE PROJECTS-->
     <div class="project-select-popup-wrapper" id="project-popup">
         <div class="project-select-popup">
-            <div class="project-select-content">
-                <a class="project-select-link">PH-Project 1</a>
+            <div class="project-select-content" onclick="hideProjectPopup()">
+                <!-- <a class="project-select-link">PH-Project 1</a> -->
+                <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
+                <div class="project-info">
+                    <h3 id="popup-project-title">PH-Project 1</h3>
+                    <div class="project-stats">
+                        <p id="popup-goal">Goal: 10,000/50,00</p>
+                        <p id="popup-days-left">Days Left: Some</p>
+                    </div>
+                </div>
             </div>
-            <div class="project-select-content">
-                <a class="project-select-link">PH-Project 2</a>
+            <div class="project-select-content" onclick="hideProjectPopup()">
+                <!-- <a class="project-select-link">PH-Project 1</a> -->
+                <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
+                <div class="project-info">
+                    <h3 id="popup-project-title">Let's Give this One an Obnoxiously Long Title to Test What the Overflow Will do</h3>
+                    <div class="project-stats">
+                        <p id="popup-goal">Goal: 10,000/50,00</p>
+                        <p id="popup-days-left">Days Left: Some</p>
+                    </div>
+                </div>
             </div>
-            <div class="project-select-content">
-                <a class="project-select-link">PH-Project 3</a>
+            <div class="project-select-content" onclick="hideProjectPopup()">
+                <!-- <a class="project-select-link">PH-Project 1</a> -->
+                <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
+                <div class="project-info">
+                    <h3 id="popup-project-title">PH-Project 3</h3>
+                    <div class="project-stats">
+                        <p id="popup-goal">Goal: 10,000/50,00</p>
+                        <p id="popup-days-left">Days Left: Some</p>
+                    </div>
+                </div>
             </div>
-            <div class="project-select-content">
-                <a class="project-select-link">PH-Project 4</a>
+            <div class="project-select-content" onclick="hideProjectPopup()">
+                <!-- <a class="project-select-link">PH-Project 1</a> -->
+                <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
+                <div class="project-info">
+                    <h3 id="popup-project-title">PH-Project 4</h3>
+                    <div class="project-stats">
+                        <p id="popup-goal">Goal: 10,000/50,00</p>
+                        <p id="popup-days-left">Days Left: Some</p>
+                    </div>
+                </div>
+            </div>
+            <div class="project-select-content" onclick="hideProjectPopup()">
+                <!-- <a class="project-select-link">PH-Project 1</a> -->
+                <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
+                <div class="project-info">
+                    <h3 id="popup-project-title">PH-Project 5</h3>
+                    <div class="project-stats">
+                        <p id="popup-goal">Goal: 10,000/50,00</p>
+                        <p id="popup-days-left">Days Left: Some</p>
+                    </div>
+                </div>
+            </div>
+            <div class="button-wrapper">
+                <button id="save" onclick="hideProjectPopup()">Save</button>
             </div>
         </div>
     </div>
