make it so user cannot scroll while the project select popup is visible

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -16,7 +16,7 @@
     <!-- <script src="https://kit.fontawesome.com/ea9288eda1.js" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body id="body">
     <!--* POPUP FOR CHOOSING ACTIVE PROJECTS-->
     <div class="project-select-popup-wrapper" id="project-popup">
         <div class="project-select-popup">
