finished tweaking sizing for project switching popup between different screens

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -21,10 +21,10 @@
     <div class="project-select-popup-wrapper" id="project-popup">
         <div class="project-select-popup">
             <div class="project-select-content" onclick="hideProjectPopup()">
-                <!-- <a class="project-select-link">PH-Project 1</a> -->
                 <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
                 <div class="project-info">
-                    <h3 id="popup-project-title">PH-Project 1</h3>
+                    <h3 id="popup-project-title"><i class="fa fa-star" id="star-icon" alt="star icon"></i> 
+                        PH-Project 1</h3>
                     <div class="project-stats">
                         <p id="popup-goal">Goal: 10,000/50,00</p>
                         <p id="popup-days-left">Days Left: Some</p>
@@ -32,10 +32,10 @@
                 </div>
             </div>
             <div class="project-select-content" onclick="hideProjectPopup()">
-                <!-- <a class="project-select-link">PH-Project 1</a> -->
                 <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
                 <div class="project-info">
-                    <h3 id="popup-project-title">Let's Give this One an Obnoxiously Long Title to Test What the Overflow Will do</h3>
+                    <h3 id="popup-project-title"><i class="fa fa-star hide" id="star-icon" alt="star icon"></i> 
+                        Let's Give this One an Obnoxiously Long Title to Test What the Overflow Will do</h3>
                     <div class="project-stats">
                         <p id="popup-goal">Goal: 10,000/50,00</p>
                         <p id="popup-days-left">Days Left: Some</p>
@@ -43,10 +43,10 @@
                 </div>
             </div>
             <div class="project-select-content" onclick="hideProjectPopup()">
-                <!-- <a class="project-select-link">PH-Project 1</a> -->
                 <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
                 <div class="project-info">
-                    <h3 id="popup-project-title">PH-Project 3</h3>
+                    <h3 id="popup-project-title"><i class="fa fa-star hide" id="star-icon" alt="star icon"></i> 
+                        PH-Project 3</h3>
                     <div class="project-stats">
                         <p id="popup-goal">Goal: 10,000/50,00</p>
                         <p id="popup-days-left">Days Left: Some</p>
@@ -54,10 +54,10 @@
                 </div>
             </div>
             <div class="project-select-content" onclick="hideProjectPopup()">
-                <!-- <a class="project-select-link">PH-Project 1</a> -->
                 <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
                 <div class="project-info">
-                    <h3 id="popup-project-title">PH-Project 4</h3>
+                    <h3 id="popup-project-title"><i class="fa fa-star hide" id="star-icon" alt="star icon"></i> 
+                        PH-Project 4</h3>
                     <div class="project-stats">
                         <p id="popup-goal">Goal: 10,000/50,00</p>
                         <p id="popup-days-left">Days Left: Some</p>
@@ -65,10 +65,10 @@
                 </div>
             </div>
             <div class="project-select-content" onclick="hideProjectPopup()">
-                <!-- <a class="project-select-link">PH-Project 1</a> -->
                 <img class="popup-image" src="../images/genre-covers/placeholder(v3).webp" alt="genre cover image">
                 <div class="project-info">
-                    <h3 id="popup-project-title">PH-Project 5</h3>
+                    <h3 id="popup-project-title"><i class="fa fa-star hide" id="star-icon" alt="star icon"></i> 
+                        PH-Project 5</h3>
                     <div class="project-stats">
                         <p id="popup-goal">Goal: 10,000/50,00</p>
                         <p id="popup-days-left">Days Left: Some</p>
