commented out not logged in banner. not really needed but won't delete just yet

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -147,7 +147,7 @@
         </nav>
     </header>
     <!--* Banner for if user is not logged in-->
-    <div class="container">
+    <!-- <div class="container">
         <div class="not-logged-in hide" id="not-logged-in">
             <p>Psst, hey you. 
             <br>
@@ -156,7 +156,7 @@
             If you're new, click <a href="account-create.html">here</a> to sign up and 
                 start earning badges!</p>
         </div>
-    </div>
+    </div> -->
     <!--* DROPDOWN FOR SELECTING ACTIVE PROJECT TO SEE -->
     <div class="project-select-wrapper">
         <div class="project-select" onclick="showProjectPopup()">Switch Project <i class="fa fa-caret-down" id="down-icon" alt="down icon"></i>
