fixed icon for projects in mobile nav menu

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -132,7 +132,7 @@
                         <a href="newProject.html">New Project 
                             <i class="fa fa-plus" id="new-project-icon" alt="plus symbol icon"></i></a>
                         <a href="projects.html">Projects 
-                            <i class="fa fa-gear" id="setting-icon" alt="gear icon"></i></a>
+                            <i class="fa fa-bookmark" id="bookmark-icon" alt="bookmark icon"></i></a>
                     </div>
                     <a href="announcements.html">News
                         <i class="fa fa-bullhorn" id="announcements-icon" alt="megaphone icon"></i></a>
