started project settings popup

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -80,6 +80,12 @@
             </div>
         </div>
     </div>
+    <!--* SETTINGS POPUP-->
+    <div class="settings-popup-wrapper">
+        <div class="settings-popup">
+            
+        </div>
+    </div>
     <header><!--* NAVIGATION FOR BOTH MOBILE AND DESKTOP--> 
         <div class="logo">
                 <img src="../images/comp-cat-beta.webp" alt="cat using computer logo">
@@ -188,7 +194,7 @@
                 </div>
             </div>
             <div class="added">
-                <span class="fa fa-gear" id="edit-pb"></span>
+                <span class="fa fa-gear" id="edit-pb" onclick="showProjectSettings()"></span>
             </div>
         </div>
     </div>
