--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -83,7 +83,7 @@
     <!--* SETTINGS POPUP-->
     <div class="settings-popup-wrapper">
         <div class="settings-popup">
-            
+
         </div>
     </div>
     <header><!--* NAVIGATION FOR BOTH MOBILE AND DESKTOP--> 
@@ -117,6 +117,7 @@
                     </div>
                 </div>
                 <!--* MOBILE NAVIGATION-->
+                <!--TODO: change onclick visible to hover for better response time and less glitches-->
                 <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
                     <div class="menu-icon-wrapper">
                         <div id="menu-bar-1" class="menu-bar"></div>
@@ -153,6 +154,7 @@
         </nav>
     </header>
     <!--* Banner for if user is not logged in-->
+    <!--! Removed bc unneeded-->
     <!-- <div class="container">
         <div class="not-logged-in hide" id="not-logged-in">
             <p>Psst, hey you. 
@@ -163,7 +165,7 @@
                 start earning badges!</p>
         </div>
     </div> -->
-    <!--* DROPDOWN FOR SELECTING ACTIVE PROJECT TO SEE -->
+    <!--* BUTTON FOR SELECTING ACTIVE PROJECT TO SEE -->
     <div class="project-select-wrapper">
         <div class="project-select" onclick="showProjectPopup()">Switch Project <i class="fa fa-caret-down" id="down-icon" alt="down icon"></i>
         </div>
@@ -198,26 +200,38 @@
             </div>
         </div>
     </div>
+    <!--* CURRENT PROJECT OVERVIEW AND INFO-->
     <div class="main-wrapper">
         <div class="current-project-wrapper">
             <div class="current-project-container">
                 <div id="area-title">
                     <h1>Your Current Project</h1>
                 </div>
-                <div id="project-img">
-                    <img src="../images/genre-covers/placeholder(v3).webp" id="theme-img">
-                </div>
-                <div id="project-title">
-                    <h2>Title</h2>
-                </div>
-                <div id="project-summary">
-                    <p>Looks like you're not logged in.
-                        <br><br>
-                        Click <a href="login.html">here</a> to login or sign up!
-                    </p>
+                <div class="progress-info-container">
+                    <div id="project-img">
+                        <img src="../images/genre-covers/placeholder(v3).webp" id="theme-img">
+                    </div>
+                    <div id="project-title">
+                        <h2>Title</h2>
+                    </div>
+                    <div id="project-summary">
+                        <!-- <p>Looks like you're not logged in.
+                            <br><br>
+                            Click <a href="login.html">here</a> to login or sign up!
+                        </p> -->
+                        <p id="summary-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+                            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+                            eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt 
+                            in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+        <!--* BADGES-->
         <div class="badge-container">
             <h1 id="badge-title">Badges</h1>
             <img src="../images/badges/start-1st-project-mono.webp" id="start-1st-project" class="badge pulse">
@@ -237,6 +251,8 @@
             <img src="../images/badges/back-it-up-mono.webp" id="back-it-up" class="badge pulse">
         </div>
     </div>
+    <!--* FOOTER-->
+    <!--! Keep link to logo artist for permission to use-->
     <footer id="footer">
         <p id="copyright">&copy;2025. All rights reserved.</p>
         <p id="logo-link">Logo by <a href="https://kohacu.com/20181205post-22321/">Kohaku!</a></p>
