--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -220,12 +220,13 @@
                             Click <a href="login.html">here</a> to login or sign up!
                         </p> -->
                         <p id="summary-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
-                            eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt 
-                            in culpa qui officia deserunt mollit anim id est laborum.
+                            Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex 
+                            sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis 
+                            convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus 
+                            fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada 
+                            lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti 
+                            sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci 
+                            varius natoque penatibus et magnis dis parturient montes nascetur
                         </p>
                     </div>
                 </div>
