--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -235,21 +235,32 @@
         <!--* BADGES-->
         <div class="badge-container">
             <h1 id="badge-title">Badges</h1>
-            <img src="../images/badges/start-1st-project-mono.webp" id="start-1st-project" class="badge pulse">
             <img src="../images/badges/first-daily-mono.webp" id="first-daily" class="badge pulse">
             <img src="../images/badges/quarter-quomplete-mono.webp" id="quarter-quomplete" class="badge pulse">
             <img src="../images/badges/half-way-mono.webp" id="half-way" class="badge pulse">
             <img src="../images/badges/all-downhill-mono.webp" id="all-downhill" class="badge pulse">
-            <img src="../images/badges/cross-finish-mono.webp" id="cross-finish" class="badge pulse"> 
-            <img src="../images/badges/on-track-mono.webp" id="on-track" class="badge pulse">
-            <img src="../images/badges/out-gate-mono.webp" id="out-gate" class="badge pulse">
+            <img src="../images/badges/cross-finish-mono.webp" id="cross-finish" class="badge pulse">
             <img src="../images/badges/streak-two-mono.webp" id="streak-two" class="badge pulse">
             <img src="../images/badges/streak-three-mono.webp" id="streak-three" class="badge pulse">
             <img src="../images/badges/streak-seven-mono.webp" id="streak-seven" class="badge pulse">
             <img src="../images/badges/streak-fourteen-mono.webp" id="streak-fourteen" class="badge pulse">
             <img src="../images/badges/streak-twentyOne-mono.webp" id="streak-twentyOne" class="badge pulse">
             <img src="../images/badges/every-streak-mono.webp" id="every-streak" class="badge pulse">
+            <img src="../images/badges/on-track-mono.webp" id="on-track" class="badge pulse">
+            <img src="../images/badges/outline-mono.webp" id="outline" class="badge pulse">
+            <img src="../images/badges/journey-mono.webp" id="journey" class="badge pulse">
+            <img src="../images/badges/dual-wielder-mono.webp" id="dual-wielder" class="badge pulse">
+            <img src="../images/badges/starting-fresh-mono.webp" id="starting-fresh" class="badge pulse">
+            <img src="../images/badges/ever-persist-mono.webp" id="ever-persist" class="badge pulse">
             <img src="../images/badges/back-it-up-mono.webp" id="back-it-up" class="badge pulse">
+            <img src="../images/badges/gathering-mono.webp" id="gathering" class="badge pulse">
+            <img src="../images/badges/hear-ye-mono.webp" id="hear-ye" class="badge pulse">
+            <img src="../images/badges/breakthrough-mono.webp" id="breakthrough" class="badge pulse">
+            <img src="../images/badges/touch-grass-mono.webp" id="touch-grass" class="badge pulse">
+            <img src="../images/badges/business-mono.webp" id="business" class="badge pulse">
+            <img src="../images/badges/tears-wept-mono.webp" id="tears-wept" class="badge pulse">
+            <img src="../images/badges/finish-him-mono.webp" id="finish-him" class="badge pulse">
+
         </div>
     </div>
     <!--* FOOTER-->
