testing popup js

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -235,7 +235,13 @@
         <!--* BADGES-->
         <div class="badge-container">
             <h1 id="badge-title">Badges</h1>
-            <img src="../images/badges/first-daily-mono.webp" id="first-daily" class="badge pulse">
+            <div class="badge-wrapper">
+                <img src="../images/badges/first-daily-mono.webp" id="first-daily" class="badge pulse">
+                <div class="badgeToPopup" id="first-daily-popup">
+                    <h3>First Daily</h3>
+                    <p>Reached your daily goal for the first time on this project</p>
+                </div>
+            </div>
             <img src="../images/badges/quarter-quomplete-mono.webp" id="quarter-quomplete" class="badge pulse">
             <img src="../images/badges/half-way-mono.webp" id="half-way" class="badge pulse">
             <img src="../images/badges/all-downhill-mono.webp" id="all-downhill" class="badge pulse">
