--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -235,6 +235,7 @@
         <!--* BADGES-->
         <div class="badge-container">
             <h1 id="badge-title">Badges</h1>
+            <!--* First Daily-->
             <div class="badge-wrapper">
                 <img src="../images/badges/first-daily-mono.webp" id="first-daily" class="badge pulse">
                 <div class="badgeToPopup" id="first-daily-popup">
@@ -242,29 +243,59 @@
                     <p>Reached your daily goal for the first time on this project</p>
                 </div>
             </div>
-            <img src="../images/badges/quarter-quomplete-mono.webp" id="quarter-quomplete" class="badge pulse">
+            <!--* Quarter Quomplete-->
+            <div class="badge-wrapper">
+                <img src="../images/badges/quarter-quomplete-mono.webp" id="quarter-quomplete" class="badge pulse">
+                <div class="badgeToPopup" id="quarter-quomplete-popup">
+                    <h3>Quarter Quomplete</h3>
+                    <p>Reached the 25% mark! That's a quarter of the way!</p>
+                </div>
+            </div>
+            <!--* Half Way-->
             <img src="../images/badges/half-way-mono.webp" id="half-way" class="badge pulse">
+            <!--* All Downhill-->
             <img src="../images/badges/all-downhill-mono.webp" id="all-downhill" class="badge pulse">
+            <!--* Cross Finish-->
             <img src="../images/badges/cross-finish-mono.webp" id="cross-finish" class="badge pulse">
+            <!--* 2 Day Streak-->
             <img src="../images/badges/streak-two-mono.webp" id="streak-two" class="badge pulse">
+            <!--* 3 Day Streak-->
             <img src="../images/badges/streak-three-mono.webp" id="streak-three" class="badge pulse">
+            <!--* 7 Day Streak-->
             <img src="../images/badges/streak-seven-mono.webp" id="streak-seven" class="badge pulse">
+            <!--* 14 Day Streak-->
             <img src="../images/badges/streak-fourteen-mono.webp" id="streak-fourteen" class="badge pulse">
+            <!--* 21 Day Streak-->
             <img src="../images/badges/streak-twentyOne-mono.webp" id="streak-twentyOne" class="badge pulse">
+            <!--* Full Streak-->
             <img src="../images/badges/every-streak-mono.webp" id="every-streak" class="badge pulse">
+            <!--* Stayed on Track-->
             <img src="../images/badges/on-track-mono.webp" id="on-track" class="badge pulse">
+            <!--* Outlined-->
             <img src="../images/badges/outline-mono.webp" id="outline" class="badge pulse">
+            <!--* Pantser/Journey-->
             <img src="../images/badges/journey-mono.webp" id="journey" class="badge pulse">
+            <!--* Dual Wielding-->
             <img src="../images/badges/dual-wielder-mono.webp" id="dual-wielder" class="badge pulse">
+            <!--* Fresh Project-->
             <img src="../images/badges/starting-fresh-mono.webp" id="starting-fresh" class="badge pulse">
+            <!--* Returning to WIP-->
             <img src="../images/badges/ever-persist-mono.webp" id="ever-persist" class="badge pulse">
+            <!--* Backed up Project-->
             <img src="../images/badges/back-it-up-mono.webp" id="back-it-up" class="badge pulse">
+            <!--* Guild Hall Gathering-->
             <img src="../images/badges/gathering-mono.webp" id="gathering" class="badge pulse">
+            <!--* Hear Ye-->
             <img src="../images/badges/hear-ye-mono.webp" id="hear-ye" class="badge pulse">
+            <!--* Breakthrough-->
             <img src="../images/badges/breakthrough-mono.webp" id="breakthrough" class="badge pulse">
+            <!--* Touch Grass-->
             <img src="../images/badges/touch-grass-mono.webp" id="touch-grass" class="badge pulse">
+            <!--* Took Care of Business-->
             <img src="../images/badges/business-mono.webp" id="business" class="badge pulse">
+            <!--* Tears Were Wept-->
             <img src="../images/badges/tears-wept-mono.webp" id="tears-wept" class="badge pulse">
+            <!--* Finished Project-->
             <img src="../images/badges/finish-him-mono.webp" id="finish-him" class="badge pulse">
 
         </div>
@@ -280,6 +311,33 @@
         function userClick() {
             document.getElementById('userDropdown').classList.toggle('show');
         }
+
+
+// BADGE POPUPS
+    const elementToHover1 = document.getElementById('first-daily');
+    const elementToPopup1 = document.getElementById('first-daily-popup');
+    elementToHover1.addEventListener('mouseenter',
+        () => {
+        elementToPopup1.style.display = 'flex';
+        });
+        
+    elementToHover1.addEventListener('mouseleave',
+        () => {
+        elementToPopup1.style.display = 'none';
+        });
+    //`~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    const elementToHover2 = document.getElementById('quarter-quomplete');
+    const elementToPopup2 = document.getElementById('quarter-quomplete-popup');
+    elementToHover2.addEventListener('mouseenter',
+        () => {
+        elementToPopup2.style.display = 'flex';
+        });
+        
+    elementToHover2.addEventListener('mouseleave',
+        () => {
+        elementToPopup2.style.display = 'none';
+        });
+    //`~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     </script>
 </body>
 </html>
