fixed weird typo

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -123,12 +123,12 @@
                         <div id="menu-bar-1" class="menu-bar"></div>
                         <div id="menu-bar-3" class="menu-bar"></div>
                         <div id="menu-bar-3" class="menu-bar"></div>
-                3</div>
                 </div>
-                <div3class="user" id="user">
+                </div>
+                <div class="user" id="user">
                     <a href="profile.html"><img src="../images/dragon/dragon-0.webp" alt="user profile picture"></a>
                     <!-- <a href="login.html"><h2>Login</h2></a> -->
-                3/div3class=>
+                </div>
             </div>
             <div class="navMenu slide-right close" id="navMenu"> <!--* Dropdown-->
                 <div class="navContent">
