cleaned up commented out css and added toggle switch to badge area (html only)

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -234,6 +234,12 @@
         </div>
         <!--* BADGES-->
         <div class="badge-container">
+            <div class="slider-container">
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                </label>
+            </div>
             <h1 id="badge-title">Badges</h1>
             <!--* First Daily-->
             <div class="badge-wrapper">
