added lock and unlock icons beside the toggle switch to make it easier to understand

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -235,10 +235,12 @@
         <!--* BADGES-->
         <div class="badge-container">
             <div class="slider-container">
+                <i class="fa fa-lock" alt="lock icon"></i>
                 <label class="switch">
-                    <input type="checkbox">
+                    <input type="checkbox" id="badgeEdit">
                     <span class="slider round"></span>
                 </label>
+                <i class="fa fa-unlock" alt="unlocked icon"></i>
             </div>
             <h1 id="badge-title">Badges</h1>
             <!--* First Daily-->
