added instructions for added and removing badges

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -353,7 +353,8 @@
             <img src="../images/badges/tears-wept-mono.webp" id="tears-wept" class="badge pulse">
             <!--* Finished Project-->
             <img src="../images/badges/finish-him-mono.webp" id="finish-him" class="badge pulse">
-
+        <p id="instruction">To give yourself a badge, simply activate the toggle and click on a badge. 
+                        Click on it again to remove it.</p>
         </div>
     </div>
     <!--* FOOTER-->
