--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -196,6 +196,7 @@
                 </div>
             </div>
             <div class="added">
+                <span class="fa fa-plus" id="updateCount" onclick="show()"></span>
                 <span class="fa fa-gear" id="edit-pb" onclick="showProjectSettings()"></span>
             </div>
         </div>
@@ -766,13 +767,19 @@
     var popup = document.getElementsByClassName("badgeToPopup");
     var slider = document.getElementById("badgeEdit").checked;
         console.log(slider.checked);
-    if (slider == true) {
-        var i;
-        for (i = 0; i < popup.length; i++) {
-            popup[i].style.display = "none";
+        if (slider == true) {
+            var i;
+            for (i = 0; i < popup.length; i++) {
+                popup[i].classList.add('hide');
+            }
+        } else {
+            var i;
+            for (i = 0; i < popup.length; i++) {
+                popup[i].classList.remove('hide');
+            }
         }
     }
-    }
+    
     </script>
 </body>
 </html>
