--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -89,7 +89,17 @@
     <!--* WORD COUNT UPDATE POPUP-->
     <div class="count-update-wrapper" id="count-update-popup">
         <div class="count-update-popup">
-            
+            <h2>Update Your Word Count</h2>
+            <form action="" method="post">
+                <div class="count-type-select">
+                    <p>Add/Replace Total <i class="fa fa-caret-down" id="down-icon" alt="down icon"></i></p>
+                    <div class="count-type-dropdown">
+                        <p class="count-type-list" id="add">Add to total</p>
+                        <p class="count-type-list" id="replace">replace total</p>
+                    </div>
+                </div>
+                <input type="text" pattern="^\d+(,\d+)?$" id="updateCount" name="updateCount">
+            </form>
         </div>
     </div>
     <!--* NAVIGATION FOR BOTH MOBILE AND DESKTOP--> 
