removed/commented out the settings icon and popup. Not sure if it's worth having atm

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -83,11 +83,11 @@
         </div>
     </div>
     <!--* SETTINGS POPUP-->
-    <div class="settings-popup-wrapper" id="settings-popup">
+    <!-- <div class="settings-popup-wrapper" id="settings-popup">
         <div class="settings-popup">
 
         </div>
-    </div>
+    </div> -->
     <!--* WORD COUNT UPDATE POPUP-->
     <div class="count-update-wrapper" id="count-update-popup">
         <div class="count-update-popup">
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <div class="added">
-                <span class="fa fa-gear" id="edit-pb" onclick="showProjectSettings()"></span>
+                <!-- <span class="fa fa-gear" id="edit-pb" onclick="showProjectSettings()"></span> -->
                 <span class="fa fa-plus" id="updateCount" onclick="showUpdateWords()"></span>
             </div>
         </div>
