tweaking layout on tablet and desktop

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -239,15 +239,15 @@
                     <div id="project-img">
                         <img src="../images/genre-covers/placeholder(v3).webp" id="theme-img">
                     </div>
-                    <div id="project-title">
+                    <!-- <div id="project-title">
                         <h2>Title</h2>
-                    </div>
+                    </div> -->
                     <div id="project-summary">
-                        <!-- <p>Looks like you're not logged in.
+                        <p>Looks like you don't have any active projects.
                             <br><br>
-                            Click <a href="login.html">here</a> to login or sign up!
-                        </p> -->
-                        <p id="summary-text">
+                            Click <a href="newProject.html">here</a> to get started!
+                        </p>
+                        <!-- <p id="summary-text">
                             Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex 
                             sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis 
                             convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus 
@@ -255,7 +255,7 @@
                             lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti 
                             sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci 
                             varius natoque penatibus et magnis dis parturient montes nascetur
-                        </p>
+                        </p> -->
                     </div>
                 </div>
             </div>
