--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -126,7 +126,7 @@
                         <div class="projects-dropdown"> <!--*Projects dropdown-->
                             <!--TODO: maybe put dropdown css in two separate files from everything else so they can both be relative to their parents-->
                             <a href="newProject.html">Create New Project</a>
-                            <a href="projects.html">Current/Past Projects</a>
+                            <a href="archives.html">Current/Past Projects</a>
                         </div>
                     </div>
                     <a href="announcements.html">News</a>
@@ -165,7 +165,7 @@
                     <div class="projects">
                         <a href="newProject.html">New Project 
                             <i class="fa fa-plus" id="new-project-icon" alt="plus symbol icon"></i></a>
-                        <a href="projects.html">Projects 
+                        <a href="archives.html">Archive 
                             <i class="fa fa-bookmark" id="bookmark-icon" alt="bookmark icon"></i></a>
                     </div>
                     <a href="announcements.html">News
