--- a/mobile-friendly/archives.html
+++ b/mobile-friendly/archives.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="The official website for the Elsewhere Writers Guild, an alternative option to NaNoWriMo."> 
     <meta property="og:image" content="http://www.elsewherewriters.com/images/comp-cat-beta.webp"> 
     <meta property="og:url" content="http://www.elsewherewriters.com/index">
-    <title>Projects</title>
+    <title>Archives</title>
     <link rel="stylesheet" href="mf-css/style.css">
     <link rel="stylesheet" href="mf-css/projects.css">
     <link rel="stylesheet" href="mf-css/progressBar.css">
