changed the stylesheet name from projects to archives

--- a/mobile-friendly/archives.html
+++ b/mobile-friendly/archives.html
@@ -9,8 +9,7 @@
     <meta property="og:url" content="http://www.elsewherewriters.com/index">
     <title>Archives</title>
     <link rel="stylesheet" href="mf-css/style.css">
-    <link rel="stylesheet" href="mf-css/projects.css">
-    <link rel="stylesheet" href="mf-css/progressBar.css">
+    <link rel="stylesheet" href="mf-css/archives.css">
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
     <script src="js/scripts.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
