started and finished individual project page for mobile and desktop

--- a/mobile-friendly/archives.html
+++ b/mobile-friendly/archives.html
@@ -84,7 +84,7 @@
     </header>
     <div class="main-wrapper">
         <h1>All Your Projects</h1>
-        <a class="overview-container">
+        <a href="project.html" class="overview-container">
             <img src="../images/genre-covers/placeholder(v3).webp">
             <div class="overview-info">
                     <h2 class="overview-title">Title <i class="fa fa-star" id="star-icon" alt="star icon"></i></h2>
@@ -105,7 +105,7 @@
                     </div>
             </div>
         </a>
-        <a class="overview-container">
+        <a href="project.html" class="overview-container">
             <img src="../images/genre-covers/placeholder(v3).webp">
             <div class="overview-info">
                     <h2 class="overview-title">Title <i class="fa fa-star" id="star-icon" alt="star icon"></i></h2>
@@ -126,7 +126,7 @@
                     </div>
             </div>
         </a>
-        <a class="overview-container">
+        <a href="project.html" class="overview-container">
             <img src="../images/genre-covers/placeholder(v3).webp">
             <div class="overview-info">
                     <h2 class="overview-title">Title <i class="fa fa-star" id="star-icon" alt="star icon"></i></h2>
