added and finished all version of 404 page

--- a/mobile-friendly/404.html
+++ b/mobile-friendly/404.html
@@ -81,9 +81,14 @@
             </div>
         </nav>
     </header>
-    <div class="404-container">
+    <div class="not-found-container">
         <h1>OPE!</h1>
-        <h1>Looks like the page you're looking for couldn't be found</h1>
+        <h3>Looks like the page you're looking for couldn't be found</h3>
+        <a href="index.html" class="go-back-button">
+            <div class="button-container">
+                <p>GO TO HOMEPAGE</p>
+            </div>
+        </a>
     </div>
 </body>
 </html>
