finished mobile profile badge layout

--- a/mobile-friendly/profile.html
+++ b/mobile-friendly/profile.html
@@ -107,7 +107,7 @@
             <div class="badge-wrapper">
                 <img src="../images/badges/complete-five-project-mono.webp" id="complete-five-project" class="badge pulse">
                 <div class="badgeToPopup" id="complete-five-project-popup">
-                    <h4>Completed 5 Projects</h4>
+                    <h4>Completed 5 Projects!</h4>
                     <p>Give yourself a firm pat on the back!</p>
                 </div>
             </div>
@@ -115,7 +115,7 @@
             <div class="badge-wrapper">
                 <img src="../images/badges/complete-ten-project-mono.webp" id="complete-ten-project" class="badge pulse">
                 <div class="badgeToPopup" id="complete-ten-project-popup">
-                    <h4>Completed 10 Projects</h4>
+                    <h4>Completed 10 Projects?!</h4>
                     <p>I don't know about you, but this seems super impressive!</p>
                 </div>
             </div>
@@ -308,7 +308,7 @@
         
     badge10.addEventListener('mouseleave',
         () => {
-        elementToPopup10.classList.remove('showFlex');
+        Popup10.classList.remove('showFlex');
         });
     //`~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     function disableBadgePopups() {
